--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
-{ 
-"name": "ytMP4-server-node-express",
-"version": "1.0.0",
-"main": "index.js",
-"license": "MIT",
+{
+  "name": "ytMP4-server-node-express",
+  "version": "1.0.0",
+  "main": "index.js",
+  "license": "MIT",
   "scripts": {
     "dev": "node --watch src/index.js",
     "start": "node src/index.js"
@@ -10,6 +10,7 @@
   "dependencies": {
     "@distube/ytdl-core": "^4.15.7",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "fluent-ffmpeg": "^2.1.3",
     "path": "^0.12.7",
