--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "socket.io": "^4.8.1",
     "stream": "^0.0.3",
     "uuid": "^11.0.3",
+    "youtube-dl-exec": "^3.0.12",
     "ytdl-core": "^4.11.5"
   }
 }
