feat: implement route to obtain video formats and download with combined audio and video

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "fluent-ffmpeg": "^2.1.3",
+    "node-youtube-dl": "^0.0.2",
     "path": "^0.12.7",
     "socket.io": "^4.8.1",
     "stream": "^0.0.3",
